step post method
